[package]
name = "sequent-repl"
version = "0.1.0"
edition = "2021"
authors = ["Kindred Group"]

[dependencies]
sequent = { package = "sequent", version = "0.1.0", path = "../sequent" }
revolver = "0.1.0"
stanza = "0.3.0"
serde = "1.0.144"

[dev-dependencies]
flanker-temp = "0.5.0"
thiserror = "1.0.37"
