[package]
name = "sequent-repl"
version = "0.3.0"
edition = "2021"
readme = "README.md"
authors = ["Kindred Group", "Emil Koutanov"]
license = "MIT"
description = "An adapter for using Sequent with Revolver."
repository = "https://github.com/kindredgroup/sequent"
keywords = ["des", "simulation", "discrete-event", "repl", "cli"]
exclude = ["/images", "/bin", "/.idea", "/.github", "/coverage", "/doc", "/examples"]

[dependencies]
sequent = { package = "sequent", version = "0.3.0", path = "../sequent" }
revolver = "0.2.0"
stanza = "0.3.0"
serde = "1.0.144"

[dev-dependencies]
flanker-temp = "0.5.0"
thiserror = "1.0.37"
