[package]
name = "sequent"
version = "0.2.1"
edition = "2021"
readme = "../README.md"
authors = ["Kindred Group", "Emil Koutanov"]
license = "MIT"
description = "A library for interactive discrete-event simulation."
repository = "https://github.com/kindredgroup/sequent"
keywords = ["des", "simulation", "discrete-event"]
exclude = ["/images", "/bin", "/.idea", "/.github", "/coverage", "/doc", "/examples"]

[dependencies]
thiserror = "1.0.37"
serde = { version = "1.0.144",  features = ["derive"] }
serde_yaml = "0.9.13"

[dev-dependencies]
flanker-assert-str = "0.5.0"
flanker-temp = "0.5.0"
